--- a/Web_Dev_Portfolio/index.html
+++ b/Web_Dev_Portfolio/index.html
@@ -12,15 +12,33 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav_title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
           <li>Blogs</li>
           <li>Portfolio</li>
-          <li><button>Hire Me</button></li>
+          <li><button class="1st_button">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner_content">
+          <h3 class="banner_greeting">Hi, I am</h3>
+          <h1 class="banner_title">Azmat</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima,
+            nostrum id! Placeat voluptates amet ipsum et perferendis delectus
+            reiciendis rerum praesentium excepturi molestias ipsa earum nisi
+            odit, minus architecto! Error, eligendi. Ullam et, eligendi
+            laudantium eveniet unde quaerat, cum maiores facilis culpa placeat
+            vitae fugit.
+          </p>
+          <button class="button">Download CV</button>
+          <button class="button">Contact</button>
+        </div>
+
+        <img class="pic" src="imgs/images/hardy.png" alt="" />
+      </div>
     </header>
     <main></main>
     <footer></footer>
