--- a/Web_Dev_Portfolio/index.html
+++ b/Web_Dev_Portfolio/index.html
@@ -25,13 +25,9 @@
         <div class="banner_content">
           <h3 class="banner_greeting">Hi, I am</h3>
           <h1 class="banner_title">Azmat</h1>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima,
-            nostrum id! Placeat voluptates amet ipsum et perferendis delectus
-            reiciendis rerum praesentium excepturi molestias ipsa earum nisi
-            odit, minus architecto! Error, eligendi. Ullam et, eligendi
-            laudantium eveniet unde quaerat, cum maiores facilis culpa placeat
-            vitae fugit.
+          <p class="banner_text">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
           </p>
           <button class="button">Download CV</button>
           <button class="button">Contact</button>
@@ -40,7 +36,93 @@
         <img class="pic" src="imgs/images/hardy.png" alt="" />
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-tittle">About me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">name</h4>
+            <p class="info_decription"><b>Azmat Ullah</b></p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">E-mail:</h4>
+            <p class="info_decription"><b>info@gmail.com</b></p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of Birth:</h4>
+            <p class="info_decription"><b>12 Jan 2005</b></p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info_decription"><b>Khulna,Bangladesh</b></p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h3 class="section-tittle">What I do</h3>
+        <p id="What-I-do-description" class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="skills-container">
+          <div class="skill">
+            <img
+              src="../Web_Dev_Portfolio/imgs/images/icons/js.png"
+              alt="JavaScript" />
+            <h3 class="skill-tittle">Vanilla JavaScript</h3>
+            <p class="skill-descrition">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img
+              src="../Web_Dev_Portfolio/imgs/images/icons/react.png"
+              alt="react" />
+            <h3 class="skill-tittle">React</h3>
+            <p class="skill-descrition">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img
+              src="../Web_Dev_Portfolio/imgs/images/icons/nodejs.png"
+              alt="nodejs" />
+            <h3 class="skill-tittle">Node.js</h3>
+            <p class="skill-descrition">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img
+              src="../Web_Dev_Portfolio/imgs/images/icons/mongo.png"
+              alt="mongo" />
+            <h3 class="skill-tittle">MongoDB</h3>
+            <p class="skill-descrition">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section></section>
+    </main>
     <footer></footer>
   </body>
 </html>
